応用セキュリティ進めた、整理とか

--- a/AppliedInformation/午前/1.テクノロジー系/セキュリティ.md
+++ b/AppliedInformation/午前/1.テクノロジー系/セキュリティ.md
@@ -1,31 +1,88 @@
 
 # セキュリティ
 
+## 情報セキュリティ
+
+### ダークネット
+
+インターネット上で到達可能かつ未使用のIPアドレス空間のことを指します。  
+
+通常のインターネット利用を考えれば特定のホストに割り当てられていない未使用のIPアドレス宛にパケットが送信されることは稀なはずですが、  
+実際にダークネットを観測すると相当数のパケットが未使用のIPアドレス宛に送信されているようです。  
+
+これらは、  
+・マルウェアが次の感染対象を探すためのスキャン  
+・マルウェアが脆弱性を攻撃するためのパケット  
+・送信元IPアドレスが詐称されたパケットへの応答パケット  
+などの不正な活動を目的とするパケットに因るものです。  
+
+ダークネットで観測されるパケットは、実際には使用されていないIPアドレスが宛先に設定されています。  
+よって、マルウェアが総当たり的に次の攻撃対象を探すためのパケットが観測されます。  
+
+### C&C(コマンド&コントロール)サーバ
+
+攻撃者がマルウェアに対して指令コマンドを送信し、マルウェアに感染した支配下のコンピュータ群(ボットネット)の動作を制御するために用いられる外部の指令サーバです。  
+コンピュータに感染したボットは、数秒～数分間隔で外部のC&Cサーバと通信を行うように仕込まれています。  
+C&Cサーバは、それに応答する形で攻撃者の端末に指令コマンドを送り込みます。
+この仕組みを「コネクトバック通信」といいます。  
+
+### 辞書攻撃
+
+一般的な単語や人名からパスワードのリストを作成し，インターネットバンキングへのログインを試行する。
+
+### パスワードリスト攻撃
+
+複数のサイトで同様のID・パスワードの組合せを使用している利用者が多いという傾向を悪用したもので、  
+あるサイトに対する攻撃などによって得られたIDとパスワードのリストを用いて、別のサイトへの不正ログインを試みる攻撃です。  
+
+この攻撃に対しては、利用者側で「パスワードの使いまわしをやめる」ことや、  
+管理者側で「2段階認証を行う」「ログイン履歴を表示し利用者に確認してもらう」などの対策が考えられます。  
+
+### 水飲み場型攻撃
+
+特定の組織や人に狙いを定める標的型攻撃の一つで、標的ユーザが良く利用するWebサイトにドライブバイダウンロードのコードなどを仕込み、  
+アクセスした標的ユーザにマルウェアやウイルスを感染させる攻撃です。  
+一般的には標的対象のみに感染するマルウェアが用いられ、標的以外の第三者がアクセスしても何も起こらないため、  
+脅威の存在やWebサイトの改ざんなどが発覚しにくくなっています。  
+
+「水飲み場型攻撃」の名称は攻撃者をライオンなどの肉食獣に、標的ユーザが良く利用するWebサイトを草食獣が集まる水飲み場に見立て、  
+肉食獣が水飲み場に来る獲物を待ち伏せする様子になぞらえています。  
+
+### ドライブバイダウンロード
+
+Webサイトにマルウェアやウイルスを仕込んでおき、利用者がアクセスすると同時に秘密裏に利用者のコンピュータにそれらをダウンロードさせたり実行させる攻撃手法  
+
+### ブルートフォース攻撃
+
+パスワードクラックや暗号鍵の解読に用いられる手法の1つで、特定の文字数および文字種で設定される可能性のあるすべての組合せを試すことで不正ログインを試みる攻撃手法です。  
+総当たり攻撃とも呼ばれます。  
+パスワード長が短く、使用可能な文字種が少ない場合には、この手法によって認証を不正に突破されてしまう危険性が高くなります。  
+
 ### DDoS(Distributed Denial of Service)
-
-Distribute
-分配する。配る。配布する。流通させる。供給する。
-
-Distributeの過去形
-ITの分野では分散の意味になるらしい。
-
-denial(名) : 否認、否定
-denyは動詞 拒否する
 
 複数の機器を踏み台にして、特定の機器に一斉攻撃を仕掛けるサイバー攻撃の一種。  
 Distributedの分散は複数の機器を使う事に起因している。  
 
-DoS攻撃との違い。
-DoS攻撃は1台の機器から対称の機器に過剰なアクセスを仕掛けるサイバー攻撃。
-分散がないので、1台からってことになる。
+DoS攻撃との違い。  
+DoS攻撃は1台の機器から対称の機器に過剰なアクセスを仕掛けるサイバー攻撃。  
+分散がないので、1台からってことになる。  
 
-・DoS攻撃：1台の機器から、対象の機器に過剰な負荷をかける攻撃
-・DDoS攻撃：複数の機器を「踏み台」に利用して、対象の機器に過剰な負荷をかける攻撃
+・DoS攻撃：1台の機器から、対象の機器に過剰な負荷をかける攻撃  
+・DDoS攻撃：複数の機器を「踏み台」に利用して、対象の機器に過剰な負荷をかける攻撃  
 
-### レインボー攻撃
+Distribute  
+分配する。配る。配布する。流通させる。供給する。  
 
-パスワードを不正に得る手法の1つ。
-パスワードとして使われるような文字列のハッシュ値をテーブル化しておき、解読したいパスワードのハッシュ値と比較することでパスワードを推測する手法。
+Distributeの過去形  
+ITの分野では分散の意味になるらしい。  
+
+denial(名) : 否認、否定
+denyは動詞 拒否する
+
+### レインボー攻撃(レインボーテーブル攻撃)
+
+パスワードを不正に得る手法の1つ。  
+パスワードとして使われるような文字列のハッシュ値をテーブル化しておき、解読したいパスワードのハッシュ値と比較することでパスワードを推測する手法。  
 
 ``` C#
 var hashList = Hash(new List<string>(){使われそうなパスワード一覧]);
@@ -83,3 +140,361 @@ var result = hashList.FirstOrDefault(f => f == getHash);
 ・デバイスを勝手にロックされて持ち主でも操作ができなくなる  
 ・外部と勝手に通信を行う  
 ・デバイスを乗っ取られ、サイバー攻撃の「踏み台」として使われる  
+
+### チャレンジレスポンス方式
+
+通信経路上に固定パスワードを流さないようにすることで、盗聴によるパスワードの漏えいやリプレイアタックを防止する認証方式です。  
+
+[1]サーバは、クライアントから要求があるたびに異なる乱数値(チャレンジ)を生成して保持するとともに、クライアントへ送る。  
+[2]クライアントは、利用者が入力したパスワードと(1)でサーバから送られた"チャレンジ"から所定の方法でレスポンスを計算する。  
+[3]クライアントは、(2)で生成した"レスポンス"と利用者が入力した利用者IDをサーバに送る。  
+[4]サーバは、クライアントから受け取った利用者IDで利用者情報を検索して、取り出したパスワードと(1)で保持していた"チャレンジ"を用いてクライアントと同じ手順でレスポンスを生成する（レスポンス照合データ）。  
+[5]サーバは、"レスポンス照合データ"とクライアントから受け取った"レスポンス"を比較し、両者が一致すれば認証成功とする。  
+
+### サーバ証明書
+
+TLS暗号化通信の開始に先立ち、サーバからクライアントに送られる公開鍵に対する電子式の証明書で、認証局(CA)と呼ばれる第三者機関によって発行されています。  
+サーバ証明書には、認証を受けた公開鍵が含まれていて、その信頼性を担保するために認証局のディジタル署名が付されています。  
+サーバ証明書を提示された利用者は、暗号化通信の開始に際し「認証局の公開鍵」を使用してサーバ証明書に付された「認証局のディジタル署名」を検証します。  
+ディジタル署名の検証に成功したならば、同封されている公開鍵が正当であり、かつ、改ざんされていないことが保証されます。  
+
+SSL/TLSでは公開鍵の検証後、その公開鍵を使って通信相手と共通鍵を共有します（RSA方式の鍵交換の場合）。  
+そして、以降はその共通鍵を使用して暗号化通信を行います。  
+
+![!](https://www.ap-siken.com/kakomon/29_haru/img/37.gif)  
+
+### ディジタル署名
+
+公開鍵暗号の技術を応用してディジタル文書の正当性を保証する仕組みです。  
+送信するディジタル文書にディジタル署名を付けると、受信側で「発信元が正当であるか」と「改ざんの有無」の2点を確認することができます。  
+ただし、改ざん部位の特定、および訂正の機能は有しません。  
+ディジタル署名の生成には「送信者の秘密鍵」を使用し、受信側での検証には「送信者の公開鍵」を使用するため、  
+設問中の署名検証鍵Xは「送信者の公開鍵」、署名生成鍵Yは「送信者の秘密鍵」に相当します。  
+
+### OCSP(Online Certificate Status Protocol)
+
+リアルタイムでディジタル証明書の失効情報を検証し、有効性を確認するプロトコルです。  
+OCSPクライアントは、確認対象となるディジタル証明書のシリアル番号等をOCSPレスポンダに送信し、有効性検証の結果を受け取ります。  
+この仕組みを利用することで、クライアント自身がCRL(証明書失効リスト)を取得・検証する手間を省くことができます。  
+![!](https://www.ap-siken.com/kakomon/02_aki/img/38.gif)  
+
+### AES(Advanced Encryption Standard)
+
+アメリカ合衆国の標準暗号規格として制定された共通鍵暗号方式です。  
+DESの後継。  
+
+### ハッシュ関数
+
+任意の長さのデータを入力すると固定長のビット列(ハッシュ値，メッセージダイジェスト)を返す関数で、次のような性質を持っています。  
+・入力データが同じであれば、常に同じメッセージダイジェストが生成される。  
+・入力データが少しでも異なっていれば生成されるメッセージダイジェストは大きく異なったものになる。  
+・メッセージダイジェストから元の入力データを再現することが困難である。  
+・異なる入力データから同じメッセージダイジェストが生成される可能性が非常に低い。  
+このうち3つ目の「あるメッセージのハッシュ値を得ることは簡単にできるが、その逆は事実上できない」というハッシュ関数の一方向性を「原像計算困難性」といいます。
+ちなみに「ハッシュ値が一致する二つの相異なるメッセージを見つけることが計算量的に困難であるという性質」は、衝突発見困難性(強衝突耐性)を説明した文です。
+
+### 否認防止(Non-Repudiation)
+
+情報セキュリティマネジメントの付加的な要素で、行った操作や発生した事象を後になって否認されないように証明できる能力のことです。  
+ログの取得で必要な項目を確実に記録するとともに、完全性が損なわれないように保管することで確保できます。  
+ディジタル署名やタイムスタンプは否認防止に活用される技術です。  
+JIS Q 27000では「主張された事象又は処理の発生、及びそれを引き起こしたエンティティを証明する能力」と定義されています。  
+
+### クロスサイトスクリプティング(XSS)
+
+動的にWebページを生成するアプリケーションのセキュリティ上の不備を意図的に利用して、悪意のあるスクリプトを混入させることで、  
+攻撃者が仕込んだ操作を実行させたり、別のサイトを横断してユーザのクッキーや個人情報を盗んだりする攻撃手法です。  
+
+XSS脆弱性のあるWebアプリケーションでは、以下の影響を受ける可能性があります。  
+[1]サイト攻撃者のブラウザ上で、攻撃者の用意したスクリプトの実行によりクッキー値を盗まれ、利用者が被害にあう。  
+[2]同様にブラウザ上でスクリプトを実行され、サイト利用者の権限でWebアプリケーションの機能を利用される。  
+[3]Webサイト上に偽の入力フォームが表示され、フィッシングにより利用者が個人情報を盗まれる。  
+
+### リスクベース認証
+
+通常とは異なる利用環境(例えば、普段とは異なるIPアドレスやISP及びOSやWebブラウザ等)からの認証要求があった場合に、  
+通常の認証に追加する形で別の認証を実施する方式です。  
+不正ログインの可能性のあるアクセスに対してだけ追加の本人認証を行うため、一定の利便性を保ちつつ、  
+異なる利用環境からの不正アクセスに対してセキュリティを高めることができます。  
+
+### 二要素認証
+
+いかなる利用条件でのアクセスの要求においても，ハードウェアトークンとパスワードを併用するなど，  
+常に二つの認証方式を併用することによって，不正アクセスに対する安全性を高める。  
+
+### RADIUS認証
+
+いかなる利用条件でのアクセスの要求においても認証方法を変更せずに，同一の手順によって普段どおりにシステムにアクセスできるようにし，可用性を高める。
+
+---
+
+## 情報セキュリティ管理
+
+### SaaS(Software as a Service)
+
+サービスの形で提供されるソフトウェア。  
+利用者に提供される機能は、クラウドのインフラストラクチャ上で稼動しているプロバイダ由来のアプリケーションである。  
+アプリケーションには、クライアントの様々な装置から、ウェブブラウザのようなシンクライアント型インターフェイス（例えばウェブメール）、  
+またはプログラムインターフェイスのいずれかを通じてアクセスする。  
+ユーザは基盤にあるインフラストラクチャを、ネットワークであれ、サーバーであれ、オペレーティングシステムであれ、  
+ストレージであれ、各アプリケーション機能ですら、管理したりコントロールしたりすることはない。  
+ただし、ユーザに固有のアプリケーションの構成の設定はその例外となろう。  
+
+### PaaS(Platform as a Service)
+
+サービスの形で提供されるプラットフォーム。
+利用者に提供される機能は、クラウドのインフラストラクチャ上にユーザが開発したまたは購入したアプリケーションを実装することであり、  
+そのアプリケーションはプロバイダがサポートするプログラミング言語、ライブラリ、サービス、およびツールを用いて生み出されたものである。  
+ユーザは基盤にあるインフラストラクチャを、ネットワークであれ、サーバーであれ、オペレーティングシステムであれ、  
+ストレージであれ、管理したりコントロールしたりすることはない。一方ユーザは自分が実装したアプリケーションと、  
+場合によってはそのアプリケーションをホストする環境の設定についてコントロール権を持つ。  
+
+### IaaS(Infrastructure as a Service)
+
+サービスの形で提供されるインフラストラクチャ。
+利用者に提供される機能は、演算機能、ストレージ、ネットワークその他の基礎的コンピューティングリソースを配置することであり、
+そこで、ユーザはオペレーティングシステムやアプリケーションを含む任意のソフトウェアを実装し走らせることができる。  
+ユーザは基盤にあるインフラストラクチャを管理したりコントロールしたりすることはないが、  
+オペレーティングシステム、ストレージ、実装されたアプリケーションに対するコントロール権を持ち、  
+場合によっては特定のネットワークコンポーネント機器（例えばホストファイアウォール）についての限定的なコントロール権を持つ。  
+
+![https://www.ap-siken.com/kakomon/28_haru/img/42_2.gif](https://www.ap-siken.com/kakomon/28_haru/img/42_2.gif)  
+
+### 情報セキュリティ早期警戒パートナーシップガイドライン
+
+IPAやJPCERTコーディネーションセンター(JPCERT/CC)等が共同で策定しているガイドラインで、脆弱性関連情報の適切な流通により、  
+コンピュータ不正アクセス、コンピュータウイルス等による被害発生を抑制するために、関係者に推奨する行為をとりまとめたものです。  
+具体的には、IPAが受付機関、JPCERT/CCが調整機関という役割を担い、発見者、製品開発者、ウェブサイト運営者と協力をしながら脆弱性関連情報に対処するための、  
+その発見から公表に至るプロセスを詳述しています。  
+
+本ガイドラインにおいて、ソフトウェア製品に係る脆弱性関連情報取扱の概要は、以下のようになっています。  
+[1]発見者は、IPAに脆弱性関連情報を届け出る  
+[2]IPAは、受け取った脆弱性関連情報を、原則としてJPCERT/CCに通知する  
+[3]JPCERT/CCは、脆弱性関連情報に関係する製品開発者を特定し、製品開発者に脆弱性関連情報を通知する  
+[4]製品開発者は、脆弱性検証を行い、その結果をJPCERT/CCに報告する  
+[5]JPCERT/CCと製品開発者は、対策方法の作成や海外の調整機関との調整に要する期間、当該脆弱性情報流出に係るリスクを考慮しつつ、脆弱性情報の公表に関するスケジュールを調整し決定する  
+[6]製品開発者は、脆弱性情報の公表日までに対策方法を作成するよう努める  
+[7]製品開発者は、製品利用者に生じるリスクを低減できると判断した場合、JPCERT/CCと調整した上で、公表日以前に製品利用者に脆弱性検証の結果、対策方法および対応状況について通知することができる  
+[8]IPAおよびJPCERT/CCは、脆弱性情報と、③にてJPCERT/CCから連絡したすべての製品開発者の脆弱性検証の結果、対策方法および対応状況を公表する  
+[9]IPAは統計情報を、原則、四半期ごとに公表する  
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/38.gif)  
+なお、ウェブアプリケーションに係る脆弱性関連情報の場合には、JPCERT/CCを介さずに、IPAからウェブサイト運営者に対して直接通知される取扱い手順となっています。  
+
+・令和3年秋期 問38  
+
+### JIS Q 27000:2019
+
+情報セキュリティを「情報の機密性、完全性及び可用性を維持すること」と定義しています。  
+この定義に集約されているように、情報セキュリティマネジメントにおいては、主に「機密性」「完全性」および「可用性」の3つの特性を維持・管理することが肝要です。  
+
+### 機密性 (Confidentiality)
+
+許可された正規のユーザだけが情報にアクセスできる特性を示す。  
+認可された利用者に対してだけ，情報を使用させる又は開示する。  
+
+### 完全性 (Integrity)
+
+情報が完全で、改ざん・破壊されていない特性を示す。  
+
+### 可用性 (Availability)
+
+システムが正常に稼働し続けることの度合い。ユーザが必要な時にシステムが利用可能である特性を示す。
+認可された利用者が要求したときにアクセスが可能である。  
+
+### 信頼性
+
+利用者の行動と意図した結果とが一貫性をもつ。  
+
+---
+
+## セキュリティ技術評価
+
+### ファジング(fuzzing)
+
+検査対象のソフトウェア製品に「ファズ（英名：fuzz）」と呼ばれる問題を引き起こしそうなデータを大量に送り込み、  
+その応答や挙動を監視することで(未知の)脆弱性を検出する検査手法です。  
+
+ファジングは、ファズデータの生成、検査対象への送信、挙動の監視を自動で行うファジングツール(ファザー)と呼ばれるソフトウェアを使用して行います。  
+開発ライフサイクルにファジングを導入することで「バグや脆弱性の低減」「テストの自動化・効率化によるコスト削減」が期待できるため、  
+大手企業の一部で徐々に活用され始めています。  
+
+---
+
+## 情報セキュリティ対策
+
+### VDI(Virtual Desktop Infrastructure)
+
+サーバ内にクライアントごとの仮想マシンを用意して仮想デスクトップ環境を構築する技術です。  
+利用者はネットワークを通じてVDIサーバ上の仮想デスクトップ環境に接続し、クライアントPCにはVDIサーバからの操作結果画面のみが転送される仕組みになっています。  
+
+この仕組みにより、クライアントがインターネット上のサイトと直接的な通信を行わなくなるので、クライアントPCをインターネットから分離できます。  
+もし利用者の操作により不正なマルウェアをダウンロードしてしまったとしても、それが保存されるのはVDIサーバ上の仮想環境ですので、クライアントPCへの感染を防げます。  
+汚染された仮想環境を削除してしまえば内部ネットワークへの影響もありません  
+
+### システム運用管理者による機密ファイルの不正な持出しを牽制するための対策
+
+・監視者の配置  
+監視によって持ち出しを完全に防げるわけではありませんが、常駐する警備員や設置された監視カメラに常に見られているという意識を持たせ、  
+不正行為を実行する気を失くさせることが効果的です。  
+・平成26年秋期 問44  
+
+### hostsファイル
+
+TCP/IPを利用するコンピュータにおいてIPアドレスとホスト名の対応を記述するファイルです。  
+hostsファイルでは「IPアドレス ホスト名」の形式で1つの行につき1つの対応を記述します。  
+
+IPアドレス「127.0.0.1」は、現在使用している自分自身のコンピュータ(localhost)を指定する特別なアドレス(ローカル・ループバック・アドレス)です。  
+Windows環境ではDNSの設定よりもhostsファイルの設定が優先されるので、攻撃者によりhostsファイルが改ざんされると不正なURLへ誘導されたり、  
+攻撃の踏み台にされたりするなどの被害が発生する可能性があります。  
+
+### フォールスネガティブ（False Negative）
+
+本来は検知すべき悪意のある活動を、誤って害のないものとして分類すること。  
+いわゆる検知漏れ。多くなるほどコンピュータに影響を与え得る攻撃を通過させてしまう可能性が高くなる。  
+悪いものをいいと判断してしまう事。  
+
+### フォールスポジティブ（False Positive）
+
+本来は通過させるべき害のない活動を、誤って悪意のあるものとして分類すること。  
+いわゆる過剰検知。  
+多くなるほど正常な操作の阻害回数や管理者の負担が増える。  
+いいものを悪いと判断してしまう事。  
+
+---
+
+## セキュリティ実装技術
+
+### SPF(Sender Policy Framework)
+
+SMTP接続してきたメールサーバのIPアドレスを基に、正規のサーバから送られた電子メールかどうかを検証する技術です。  
+受信メールサーバ側にて電子メールの送信元ドメインが詐称されていないかを検査できます。  
+
+[1]送信側は、送信側ドメインのDNSサーバのSPFレコード(又はTXTレコード)に正当なメールサーバのIPアドレスやホスト名を登録し、公開しておく。  
+[2]送信側から受信側へ、SMTPメールが送信される。  
+[3]受信側メールサーバは、受信側ドメインのDNSサーバを通じて、MAIL FROMコマンドに記載された送信者メールアドレスのドメインを管理するDNSサーバに問い合わせ、SPF情報を取得する。  
+[4]SPF情報との照合でSMTP接続してきたメールサーバのIPアドレスの確認に成功すれば、正当なドメインから送信されたと判断する。  
+![a](https://www.ap-siken.com/kakomon/27_haru/img/44.gif)  
+
+### SMTP-AUTH(SMTP-Authentication)
+
+メール投稿にあたってユーザ認証の仕組みがないSMTPにユーザ認証機能を追加した方式です。  
+使用するにはメールサーバとクライアントの双方が対応していなければなりませんが、  
+メール送信するときに「ユーザ名とパスワード」「チャレンジレスポンス」などで認証を行い、  
+認証されたユーザのみからのメール送信を許可することで不正な送信要求を遮断することができます。  
+
+### SMTP over SSL(TLS)によるサーバ/クライアントの相互認証
+
+サーバは認証局のディジタル証明書をもち，クライアントから送信された認証局の署名付きクライアント証明書の妥当性を確認する。
+
+### POP before SMTP
+
+電子メールを受信した際にパスワード認証が成功したクライアントのIPアドレスは，一定時間だけSMTPサーバへの電子メールの送信が許可される。
+
+### APOP(Authenticated POP)
+
+パスワードを秘匿するために，パスワードからハッシュ値を計算して，その値で利用者が電子メールを受信する際の利用者認証を行う。
+
+### クリックジャッキング
+
+攻撃者が用意したWebページの前面に透明化した別のWebページを重ねることでユーザを視覚的にだまし、正常に視認できるWebページ上をクリックさせることで、  
+透明化したWebページのコンテンツを操作させる攻撃です。  
+ユーザのクリックを奪うという攻撃の特徴からクリック・ジャッキングと呼ばれます。  
+
+対策:
+HTTPレスポンスヘッダにX-Frame-Optionsを設定する。 ○  
+→
+"X-Frame-Options"は、フレーム要素（`<frame>`または`<iframe>`）を使用したコンテンツ表示を許可するかどうか指示するためのHTTPヘッダで、  
+値として"DENY(拒否)"または"SAMEORIGIN"を指定することがクリックジャッキング攻撃への対策となります。  
+クリックジャッキング攻撃は、別サイトのHTMLをフレーム要素で読込み、それを透明化して罠サイトの上に重ね合わせるため、  
+フレーム要素を使用した他サイトの表示を禁止すれば防ぐことができます。  
+
+HTTPレスポンスヘッダにX-Content-Type-Optionsを設定する。 ×  
+→
+"X-Content-Type-Options"は、ブラウザによるMIMEスニッフィングの有効・無効を指示するためのHTTPヘッダで、  
+値として"nosniff"を指定することがクロスサイトスクリプティングへの対策になります。  
+MIMEスニッフィングとは、WebサーバからMIMEタイプ（メディアの種類）が指定されないなどの理由でリソースのMIMEタイプが不明なとき、  
+ブラウザがリソースのバイトストリームを調べ、MIMEタイプを推定する機能です。  
+これが有効になっていると、攻撃者がJSONや画像内に埋め込んだスクリプトを不正に実行してしまうおそれがあります。  
+これを防止するためのヘッダが"X-Content-Type-Options"です。  
+
+### WAF(Web Application Firewall)
+
+特徴的なパターンが含まれるかなどWebアプリケーションへの通信内容を検査して，不正な操作を遮断する。  
+パケットのヘッダ部だけでなくペイロード部(データ部分)をチェックすることで、Webアプリケーションに対するこれらの攻撃を検知し、遮断することが可能です。  
+
+### OSコマンドインジェクション
+
+ユーザの入力をもとにOSのコマンドを発行して処理を行うWebアプリケーションに対して、  
+不正なコマンドを渡すことで任意のファイルに対する読出し，変更，削除やパスワードの取得などを行う攻撃方法。  
+OSコマンドの呼出しに使われる関数は、C,Perl,PHPの"exec"，"system"、入力値としてコマンドを許しているPerlの"open"関数などがある  
+
+### SQLインジェクション
+
+入力データとしてデータベースへの命令文を構成するデータを入力し、Webアプリケーションが想定しない想定外のSQL文を意図的に実行させることでデータベースを攻撃する方法  
+
+### クロスサイトスクリプティング
+
+動的にWebページを生成するアプリケーションのセキュリティ上の不備を意図的に利用し、  
+サイト間を横断して悪意のあるスクリプトを混入させることでユーザのクッキーを盗むなどの攻撃を行う方法  
+
+### クロスサイトリクエストフォージェリ
+
+悪意のあるスクリプトが埋め込まれたWebページを訪問者に閲覧させて，別のWebサイトで，その訪問者が意図しない操作を行わせる攻撃手法。  
+会員制サイトでログイン状態であるときに会員情報の変更や商品の注文画面への直接リンクを踏ませる(またはスクリプトでリダイレクトする)などの意図しない不正な処理要求を行わせる行為がこれに該当する。  
+
+### セッションハイジャック
+
+認証が完了してセッションを開始しているブラウザとWebサーバの間の通信において、  
+CookieやセッションIDなどのセッション情報を盗むことで、対象セッションを通信当事者以外が乗っ取る攻撃方法  
+
+### DNSキャッシュポイズニング攻撃
+
+DNSキャッシュサーバに偽のDNS情報をキャッシュとして登録させることで、利用者を偽のWebサイトに誘導する攻撃です。  
+
+まず設問に登場する「再帰的な問合せ」について確認しておきます。  
+DNSの名前解決はその性質によって「再帰的な問合せ」と「反復(非再帰的)問合せ」に区別されます。  
+**再帰的な問合せ**  
+リゾルバから名前解決要求を受けたDNSサーバが他のDNSサーバに代理して問合せを行い、最終的な結果をリゾルバに返す必要のある問合せのこと  
+**反復問合せ**  
+リゾルバから再帰的問合せを受けたDNSサーバが、それを解決できるまで繰り返し他のDNSサーバに行う問合せのこと  
+
+この2つの問合せの違いを踏まえて、攻撃者がDNSキャッシュサーバに偽のキャッシュ情報を登録させる手順を追ってみます。  
+
+[1]攻撃者は、キャッシュサーバに対して偽の再帰的な問合せを行い反復問合せを強制的に生じさせる。  
+[2]キャッシュサーバは、コンテンツサーバに対して反復問合せを行う。  
+[3]攻撃者は、コンテンツサーバが正規の応答を返すよりも先にキャッシュサーバへ偽の応答を送りつける。  
+[4]キャッシュサーバは、攻撃者から送られた偽の応答を正規のものと判断しキャッシュに登録する。  
+この時点でDNSクエリは解決済なのでコンテンツサーバから送られた正規の応答は破棄される。  
+
+DNSキャッシュポイズニングは、上記のように外部から攻撃目的で送られた再帰的な問合せをキャッシュサーバが処理してしまうことから始まります。  
+再帰的問合せの役割は、内部ネットワークのホストが外部ネットワークに接続する際の名前解決であり、  
+原則として外部からの再帰的な問合せに応じる必要はないはずですから、
+再帰的な問合せを受け付けるホストを内部ネットワークだけに限定することがキャッシュポイズニング攻撃への対策となります。  
+また、DNSでは送信元のIPアドレスとポート番号、トランザクションIDの全てが一致しないと、  
+キャッシュサーバはコンテンツサーバからの正しい応答として認めない仕組みを備えています。  
+このためDNSキャッシュポイズニングが成立するためには、反復問合せに対する偽の応答メッセージに含まれる各情報を正規の応答と一致させる必要があります。  
+DNSの設定で、ポート番号やトランザクションIDが固定されていたり推測されやすいものになっていたりすると、パケットの偽装が容易になり攻撃に対して脆弱になってしまいます。  
+
+### サンドボックス(Sandbox)
+
+外部から受け取ったプログラムを保護された領域で動作させることによってシステムが不正に操作されるのを防ぎ、セキュリティを向上させる仕組みです。  
+JavaアプレットやAdobeFlash、Webブラウザのプラグインなどでは外部プログラムの機能を制限することで脆弱性を低減させています。  
+最近では、仮想環境として構築したサンドボックスが、未確認ファイルや不審ファイルの動作確認に使えることから標的型攻撃への対策としても注目を集めています。  
+サンドボックスとは「砂場」のことであり、子供を安全が確保された場所内だけで遊ばせるイメージからこう呼ばれています。  
+
+### SSH(Secure Shell)
+
+公開鍵暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコルであり、  
+SSLと同様にトランスポート層とアプリケーション層で通信を暗号化します。  
+
+当初はrlogin，rshやTelnetを安全に利用する手段として用いられていましたが、現在ではポートフォワーディング機能を用いることで、  
+POP3やFTPなどネットワーク上に平文のパスワードが流れてしまう既存のプロトコルを安全に利用する技術としても広く利用されています。  
+
+#### ポートフォワーディング
+
+ローカルホストの任意のポートに送信したデータを、リモートホストの特定ポートへ転送する機能  
+
+---
+
+## 1回目に間違えた問題
