--- a/AppliedInformation/午後/H21A.md
+++ b/AppliedInformation/午後/H21A.md
@@ -1,55 +1,67 @@
 # 平成21年秋期
 
+## セキュリティ
+
 キーワード  
 ・プライベート認証局  
 ・公開鍵証明書≒公開鍵  
 ・電子証明書  
 
-## 1回目
-
-ICカードは秘密鍵と公開鍵証明書
-dは公開鍵証明書
-aは秘密鍵
-ユーザーの秘密鍵って言ってるから、
-aはユーザーの秘密鍵
-bはユーザーの公開鍵かな。
-公開鍵に対して何で署名するか。
-その公開鍵が正当なものである署名。
-
 久しぶりに応用の午後やってみたが、セキュリティに関しては特に難しいとは感じない。  
 もう少しやってみるけど、これならすぐに組み込みシステムもできるかも。  
 
-### 1
+``` txt : 回答
+## メモ
+ICカードは秘密鍵と公開鍵証明書  
+dは公開鍵証明書  
+aは秘密鍵  
+ユーザーの秘密鍵って言ってるから、  
+aはユーザーの秘密鍵  
+bはユーザーの公開鍵か。  
+公開鍵に対して何で署名するか。  
+その公開鍵が正当なものである署名。  
 
-■ a キ 社員Aの秘密鍵  
-■ b オ 社員Aの公開鍵  
-■ c サ 認証局の公開鍵証明書 × シ 認証局の秘密鍵  
-■ d カ 社員Aの公開鍵認証  
 
+## 1
+a: キ 社員Aの秘密鍵  
+b: オ 社員Aの公開鍵  
+c: サ 認証局の公開鍵証明書 × シ 認証局の秘密鍵  
+d: カ 社員Aの公開鍵認証  
+
+## 2
+e: イ
+f: ア
+g: ウ
+
+
+## 3
+イ、オ
+
+
+## 4 △
+社員Aの公開鍵を知り得ないため、電子署名を復号できないから  
+→  
+社外では公開鍵証明書の取得と検証ができないから  
+```
+
+``` txt : 解析
+## 1
 ※公開鍵証明書(ディジタル証明書)  
 個人の公開鍵について認証局がその正当性を証明するもの。  
 認証局は証明のために公開鍵証明書に署名をするが、その署名は認証局しか持っていない、認証局の秘密鍵を使って行われる。  
 
-### 2
 
-■ e イ
-■ f ア
-■ g ウ
 
+## 2
 ※公開鍵証明書の取得はしているが、肝心の公開鍵を取得しなくてよいのか？  
 公開鍵証明書の中には、その証明書が対象とする公開鍵が含まれる。  
 公開鍵証明書を取得すれば、同時に公開鍵も取得できている事になる。  
 
-### 3
 
-イ、オ
+## 3
 
-### 4 △
 
-社員Aの公開鍵を知り得ないため、電子署名を復号できないから。  
-→  
-社外では公開鍵証明書の取得と検証ができないから
-
+## 4
 電子署名の下りを復習する必要がある。  
 秘密鍵で暗号化して受け取ったやつが公開鍵で復号する。  
 その時に改ざんされていなければ、おーけーってだけだった気がする。  
@@ -70,5 +82,6 @@ bはユーザーの公開鍵かな。
 ※プライベート認証局  
 組織独自が運営する認証局の事。  
 専門機関が運営し、外部の組織が利用するような認証局をパブリック認証局という。  
+```
 
 ---
