--- a/AppliedInformation/午後/H25S.md
+++ b/AppliedInformation/午後/H25S.md
@@ -1,14 +1,16 @@
-# 平成25年春季 ワイヤレス充電ステーション
+# H25S
+
+---
+
+## 組み込みシステム ワイヤレス充電ステーション
 
 プリエンプション  
 優先度に関する問題  
 
-## 1回目 23分 100点
-
 実は特に書くことがない。
 100点取れた地点でこれはもういいだろう。
 
-``` txt
+``` txt : 23分 100点
 ## メモ
 10 : 6 = 1 : ?
 10? = 6
@@ -17,8 +19,10 @@
 51 / 0.6 = 85分
 60+25
 
+
 ## 1 ○
 01:25
+
 
 ## 2
 a 4 ○
@@ -26,12 +30,13 @@ b 2 ○
 c ア ○
 d Stop_Power ○
 
+
 ## 3 ○
 機器IDが0
+
 
 ## 4 ○
 安全監視タスクでGet_Wattを実行
 →
 Get_Watt関数を呼び出す
-
 ```
