--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -1,6 +1,8 @@
-# 平成27年春季 自動車用衝突被害軽減ブレーキシステム
+# 平成27年春季
 
-## 1回目 30分 5/10
+---
+
+## 組み込みシステム 自動車用衝突被害軽減ブレーキシステム
 
 うーん・・・半分か。  
 これも計算問題が出てきた。  
@@ -20,7 +22,7 @@
 ・ウォッチドッグタイマー  
 ・距離の計算  
 
-``` txt
+``` txt : 回答 30分 5/10
 ## メモ
 
 衝突までの予測時間・・。
@@ -54,17 +56,38 @@
 
 
 ## 1
-(1)
+[1]
 a：0.02
 b：d2
 c：s
 
-(2) 車間距離が開いている状態 ○
+[2]
+車間距離が開いている状態 ○
 他 : 車間距離が広がっている(道場)
 
-(3) 0.4 × 1.5
+[3]
+0.4 × 1.5
 
-### 解説
+
+## 2
+[1]
+160000 × 20000
+
+[2]
+d エ × イ
+e ア
+
+[3]
+常に警告が表示されてしまう ×
+衝突を回避しても警告が止まらない
+
+
+## 3
+イ × ウ
+```
+
+``` txt 解説
+## 1
 きほん : 速度 = 距離 ÷ 時間
 
 (2)
@@ -96,16 +119,9 @@ c：s
 いや、ならそういってくれよって思うけど・・・。
 
 
-## 2
-(1) 160000 × 20000
-(2)
-d エ × イ
-e ア
-(3) 常に警告が表示されてしまう ×
-衝突を回避しても警告が止まらない
 
-### 解説
-(1)
+## 2
+[1]
 図３の制御部のMCUブロック図よりクロック入力は8MHzであることがわかります。また、分周器は8分周であると説明されています。
 クロック入力を8分周した場合のクロック周波数は以下になります。
  8MHz÷8分周＝1MHz
@@ -121,7 +137,7 @@ e ア
 1Mって100万ですよね？
 1秒間に100万回カウントダウンするわけで、0.02になるためには20000をセットしないといけないというわけです。
 
-(2)
+[2]
 問題文の〔制御部の構成とタイマ割込みソフトウェア〕に、タイマ割込みは20ミリ秒間隔で発生すると説明されています。
 よって、図４のフローが20ミリ秒間隔で実行されることになります。
 処理B「警告信号の出力を停止」を行わない場合、単純に警告信号が消えない不具合が発生します。
@@ -135,9 +151,9 @@ e ア
 この考えに至るためにはユースケースを考えないといけない。
 それも常識的な範囲でだ。
 
-## 3
-イ × ウ
 
+
+## 3
 20msの中での話だと思い込んだ結果。
 全体は20msで応答に10ms。
 間をとって15msがもっともらしいと感じる。
