--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -1,6 +1,6 @@
-# 平成28年秋期 腕時計型脈拍計の設計
+# 平成28年秋期
 
-## 1回目 30分 1/8
+## 組み込みシステム 腕時計型脈拍計の設計
 
 今までとは打って変わって、1問しか正解しなかった。  
 もう一問は正解みたいなものだが、それでもミスった回答であることに変わりはない。  
@@ -24,7 +24,7 @@
 最後の文章問題に関しては、着目したところはよかったけど、それを答えとして落とし込むことが出来なかった。
 ひいては、フロー図の理解力不足だろう。
 
-``` txt
+``` txt : 回答 30分 1/8
 ## メモ
 6000/50 120 72 48
 
@@ -32,6 +32,27 @@
 ## 1
 点灯時間設定コマンド 72 × 12
 消灯時間設定コマンド 48 × 8
+
+
+## 2
+[1]
+a 輝度を補正 × 輝度設定コマンドを送信
+b 計測終了コマンドを送信
+[2] ウ × イ
+[3]
+最短所要時間 0 × 6
+最長所要時間 6 × 16
+
+
+## 3 
+皮膚の状態などにより反射光の光量が変化すると正確な脈拍数を計測できないから 0%
+→
+輝度補正終了前までのzは適正範囲を外れており、脈拍数算出には不適切だから(道場)
+輝度補正中のzは適正範囲外の値であり、脈拍数計測には不適切だから。(itec)
+```
+
+``` txt : 解説
+## 1
 
 1ミリ秒 = 0.001秒
 50Hz = 1秒間に50回実行される。
@@ -46,14 +67,8 @@
 6000msを50で割る地点でだめだ。なら50も6倍しないといけないし、それならやっぱり1秒に50回が常識的な考え方になるんだよなぁ。
 
 
+
 ## 2
-(1)
-a 輝度を補正 × 輝度設定コマンドを送信
-b 計測終了コマンドを送信
-(2) ウ × イ
-(3)
-最短所要時間 0 × 6
-最長所要時間 6 × 16
 
 (1)は単純なミスリード。コマンドで回答すればよかっただけ。
 (2)は減算なのか乗算なのか検討が付かなかった。
@@ -77,11 +92,8 @@ b 計測終了コマンドを送信
 20ミリ * 800 = 16000 = 16秒
 
 
-## 3 0%
-皮膚の状態などにより反射光の光量が変化すると正確な脈拍数を計測できないから
-→
-輝度補正終了前までのzは適正範囲を外れており、脈拍数算出には不適切だから(道場)
-輝度補正中のzは適正範囲外の値であり、脈拍数計測には不適切だから。(itec)
+
+## 3
 
 輝度補正中の測定値zは適正範囲内に収まっていない値。
 脈拍数計測の関係については、「脈拍数計測の方法」に次のように記述されている。
