--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -1,9 +1,16 @@
-# 平成30年秋期 カードを使用した電子扉システムの設計
+# H30A
+
+## セキュリティ
+
+``` txt : 回答
+```
+
+---
+
+## 組み込みシステム カードを使用した電子扉システムの設計
 
 プリエンプション  
 優先度に関する問題  
-
-## 1回目 30分 7/8
 
 ほぼ全問正解。  
 間違えたのは適切な字句を入れなさいってところをキーワードでしか答えなかったから。  
@@ -15,7 +22,7 @@
 それに嵌った。  
 30分ちょうどでわかって正解した感じ。  
 
-``` txt
+``` txt : 回答 30分 7/8
 ## メモ
 
 
@@ -23,12 +30,14 @@
 a カード識別コード
 b 扉識別コード
 
+
 ## 2
 c エラー音 × エラー音を発生する
 d オ
 e カ
 f 閉扉
 g タイマ満了
+
 
 ## 3 100%
 t1秒経過して開錠処理が開始されてから１秒以内に扉を開ける
