--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -13,3 +13,6 @@
 自社の欠点がどこかを高い解像度から芯を句った指摘をされる。  
 
 [staticおじさんの逆襲](https://qiita.com/minebreaker/items/45ffaaa5e8729e16cfb4)  
+
+<https://twitter.com/ito_yusaku/status/1488421143426248708>
+>優秀なエンジニアなら、知らんことは正直に「知らないです」って答えるよ。  
