組み込み完了

--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -72,4 +72,101 @@ AESはDESの後継。
 
 ---
 
-## 組み込みシステム
+## 組み込みシステム ドライブレコーダ
+
+簡単なほうだったが答え方の形式により不正解になったのが3問あった。  
+言いたいことは全てあっている。  
+ここら辺はIPAの塩梅に任せるしかない。  
+こちらとしては、制限時間内に状況を把握して的確に回答できればいいのだ。  
+でもよく見てみれば、細かい部分での語弊がおおい回答かもしれない。  
+やっぱり正確に記述しないとダメかも。  
+
+``` txt : 回答 28分 5/8
+
+## 1
+a : 動画を保存 × 動画ファイルを保存
+
+動画ファイルの破損って言ってるから素直に動画ファイルにすればよかったかも。
+
+
+## 2
+10.5×F×N × 10.5FN
+
+書き方的には俺の奴でもいいっぽい。
+
+
+## 3
+[1]
+b : 衝撃イベント
+c : 画像格納イベント
+d : タイマ満了イベント
+
+[2]
+e : 100ミリ × 20
+f : 20
+
+
+## 4
+GPS情報の取得前もしくは取得不可でシステム時刻を設定できなかった場合 0%
+→
+電源投入後、システム時刻の設定が完了するまでの間に衝撃を検出した場合
+
+↑
+取得不可でも、1回でも取得出来ていたらシステム時刻は設定されているので、保存可能。
+やっちまった。
+素直にシステム時刻が設定されるまでの間にって言っておけばよかった。
+慢心した。
+```
+
+``` txt : 解説
+## 1
+動画ファイルの生成または追記の途中で電源断が生じると、動画ファイルが破損してしまう恐れがあります。
+30秒間の電力を供給可能な二次電池を用意する理由は、動画ファイルの保存中に電源断が生じても動画ファイルの保存動作を維持するためです。
+なお、衝撃センサからの割込みを禁止するのは、動画ファイルの保存中に再度衝撃を受けるとその時点から20秒間の画像を追記する仕様のためです。
+二次電池により担保される電力供給時間は30秒間なので、再衝撃による割込みを許すと動画ファイルの保存時間の合計が30秒を超えてしまい、
+保存動作中に電力供給が途絶えてしまう恐れがあります。
+
+∴a＝動画ファイルを保存
+
+
+
+## 2
+問題文中に記録バッファの容量について「10.5秒間分の画像データを書き込むことができる容量とする」という指示があります。
+1フレームの画像データはGPS情報を含めてNバイト、1秒の動画はFフレームの画像で構成されるので、10.5秒間分の画像データを表す式は以下の通りです。
+
+10.5×F×N＝10.5FN(バイト)
+
+∴10.5FN
+
+
+
+## 3
+[2]
+〔eについて〕
+動画ファイルに保存されるデータは衝撃後20秒間の画像データです。記録バッファの画像データを動画ファイルに追記するのに最大で100ミリ秒を要しますが、
+この間もカメラから記録バッファへの録画は続いています。
+衝撃後の動画には"衝撃検出後データ保存状態"の「画像格納イベント」で追記される画像データに加えて、"衝撃検出前データ保存状態"で記録された画像データの分も含まれます。
+つまりタイマに20秒を設定すれば衝撃イベントを受信した時点から20秒間の動画を記録可能です。
+
+∴e＝20
+pm07_5.gif/image-size:400×118
+〔fについて〕
+"衝撃検出後データ保存状態"中に「衝撃イベント」を受信したということは、動画ファイルを保存中に再度衝撃センサからの割込みを受けたということです。
+この場合、受けた時点から20秒間、画像データを待ち受けて動画ファイルに追記します。
+したがってその時点で設定してあるタイマ要求を取り消し、タイマに再度20秒を設定することになります。
+
+∴f＝20
+
+
+
+## 4
+問題文の「システム時刻が設定されていないときは，動画ファイルを保存しない」という記述に注目します。
+動画ファイルの名前はシステム時刻をもとに決定されるので、システム時刻が未設定の時には衝撃イベントを検出しても動画ファイルが保存されません。
+システム時刻は電源投入時には未設定になっており、電源投入後にGPSモジュールから通知された情報をもとに制御装置が設定します。
+しかしGPSの特性として、屋内（駅の地下街等）やビルの谷間、見晴らしの悪い場所、 雨の日や曇が多い日などは現在地の特定に時間がかかったり、 
+正しい場所が取得できない場合があります。このような環境下で起動された場合、制御装置にGPS情報が通知されず、システム時刻が未設定のままになってしまう可能性があります。
+この状態で衝撃を検出したとしてもレコーダは動画ファイルをSDに保存しません。
+
+∴電源投入後、システム時刻の設定が完了するまでの間に衝撃を検出した場合
+
+```
