--- a/BasicInformation/午前/1.テクノロジ系/9.データベース.md
+++ b/BasicInformation/午前/1.テクノロジ系/9.データベース.md
@@ -71,6 +71,12 @@ ON 社員.所属 = 部門.部門名
 WHERE 部門.フロア = 2
 ```
 
+### ストアドプロシージャ(stored procedure)
+
+データベースに対する一連の処理をまとめた手続きにして、データベース管理システムに保存したものです。  
+利用者は通常のクエリを発行する代わりに、データベース管理システム内の手続きを呼び出すことによって目的の処理を実行させることができます。  
+クライアントからサーバに対してのストアドプロシージャ1回の要求で、データベースに複数のクエリを発行することができるので、  
+クライアントから直に同数のクエリを発行する場合と比較して、クライアント－サーバ間のネットワーク負荷の軽減が期待できます。  
 
 ---
 
