少し整理、バッチ追加

--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -3,7 +3,6 @@
 こういう記事をまとめる領域も作りたい。  
 という事で作った。  
 
-[IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
 
 [ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
 
@@ -16,3 +15,11 @@
 
 <https://twitter.com/ito_yusaku/status/1488421143426248708>
 >優秀なエンジニアなら、知らんことは正直に「知らないです」って答えるよ。  
+
+## 資格系
+
+[IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
+
+## おもしろ
+
+[[Nginx]どうしてもンギックスと呼びたい](https://qiita.com/yonhure/items/51f2e275f6dc9f550c93)  
