--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -610,3 +610,39 @@ avalon peninsula canada
 
 LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件となるか。
 結果、3件になるのは確認したが、不安なのでちゃんと確認する。
+
+
+
+
+早くモニターアーム設置して補強プレートが必要なのか確認する必要がある。
+買い物しなくて済むようになってきた。
+気が楽になった。
+Inspironはコスパは昔ほどよくないみたいだな。
+プッシュアップバーは買ってよかったもの
+
+
+今日で4章の午前は終わる。
+意外と早かったな。
+2度もする必要はなさそうだ。
+後は、4章の計算問題をとにかくやって、読解力と計算能力を鍛えていく。
+
+基本情報の内容に追記する形で充分そうだ。
+どうせ延長なのだから、今更追記したところで問題はないだろう。
+
+
+
+8000
+3M
+300 * 10^-9
+900 * 10-3
+0.9s
+0.8s
+
+1.7s
+
+2.5s
+
+0.8s
+8000bit
+
+10000bit / s
