データベース午前完了

--- a/AppliedInformation/午前/1.テクノロジー系/セキュリティ.md
+++ b/AppliedInformation/午前/1.テクノロジー系/セキュリティ.md
@@ -437,6 +437,12 @@ Secure Hash Algorithm 256の略。
 ケーサイファー・ツーと読みます。  
 2007年に九州大学とKDDI研究所により共同開発された共通鍵暗号方式です。  
 
+### MD5(Message Digest Algorithm 5)
+
+暗号学的ハッシュ関数。  
+128ビット。  
+2018年において弱点が発見されているのでもう使えない。  
+
 ### ハイブリッド暗号方式
 
 公開鍵暗号方式を用いて共通鍵を通信相手へ安全に配送し、以後はその共通鍵を使用して暗号化通信を行う方式です。TLSやS/MIMEで採用されています。  
