--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -247,8 +247,14 @@ RAID0がストライピングであり、ストライピングといったらRAI
 クラスタシステムのうち、高可用性を実現するものを「HA(High Availability)クラスタ」といいます。  
 通常、HAクラスタは正常時に稼働を行う主系と障害発生時に処理を引き継ぐ予備系の二重構成をとることで耐障害性を高めています。  
 
-フェールオーバは、障害発生時に主系から予備系への引き継ぎを自動的、かつ継ぎ目なしに行う機能で、HAクラスタなどの高信頼性が要求されるシステムに実装されています。
-このようなシステムでは主系と予備系の間で「ハートビート」と呼ばれる主系の状態を監視するためのパケットが定期的にやり取りされます。予備系はハートビートの受信が途絶えると主系に障害が発生したと判断し、自律的に主系の処理や設定を引き継ぎ、新たな主系として稼働を始めます。このように障害が発生した場合にも利用者に気付かれることなく処理の継続ができることで信頼性が向上します。
+**フェールオーバ**は、障害発生時に主系から予備系への引き継ぎを**自動的、かつ継ぎ目なし**に行う機能で、HAクラスタなどの高信頼性が要求されるシステムに実装されています。  
+このようなシステムでは主系と予備系の間で「ハートビート」と呼ばれる主系の状態を監視するためのパケットが定期的にやり取りされます。  
+予備系はハートビートの受信が途絶えると主系に障害が発生したと判断し、**自律的に**主系の処理や設定を引き継ぎ、新たな主系として稼働を始めます。  
+このように障害が発生した場合にも利用者に気付かれることなく処理の継続ができることで信頼性が向上します。  
+
+平成27年秋期 午前問12  
+クラスタリングシステムで，ノード障害が発生したときに信頼性を向上させる機能のうち，適切なものはどれか。  
+障害ノードを排除して代替ノードでアプリケーションを実行させるフェールオーバ機能が働く。  
 
 ### クラスタリング方式
 
@@ -502,6 +508,9 @@ $1-(1-R)^2$
 
 「2台とも正常に動作しなければならないときの稼働率」 = 直接接続
 $R^2$
+
+稼働率が0.5倍になったらMTTRとMTBFは等しくなる。  
+MTTRとMTBFが1.5倍になっても稼働率は変わらない。  
 
 ### M/M/1の待ち行列モデル
 
