--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -52,6 +52,13 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 完全菜食主義者のこと。
 卵や乳製品を含む、動物性食品を一切口にしない。
 
+## "Octo"berは何故10月なのか？何故8月じゃなかったのか
+
+["Octo"berは何故10月なのか？何故8月じゃなかったのか？](https://twitter.com/songmu/status/1488391927095775235)  
+
+>簡単にいえばローマ暦では元々現3月に当たるMārtiusが年始で現9月(September)や現10月(Octōber)はそこから数えて7番目や8番目の月だったからです  
+>そして前153年から現1月に当たるJānuāriusが年始に設定されたことで結果的に順番が2つずつ後ろに動いたという感じです  
+
 ---
 
 ## Amazon系
