--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -3,7 +3,6 @@
 こういう記事をまとめる領域も作りたい。  
 という事で作った。  
 
-
 [ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
 
 [レベル高いエンジニアが働く土壌ができていない状態で、お金積んでレベル高いエンジニアを雇ったらどうなるの？](https://twitter.com/shin_semiya/status/1473231873866608640)  
@@ -16,9 +15,13 @@
 <https://twitter.com/ito_yusaku/status/1488421143426248708>
 >優秀なエンジニアなら、知らんことは正直に「知らないです」って答えるよ。  
 
+[GitHubの機能をフルに使って職務経歴書の継続的インテグレーションを実現する](https://zenn.dev/ryo_kawamata/articles/resume-on-github)  
+
 ## 資格系
 
 [IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
+
+[海外で働くのにも役立つ？ 資格「情報処理技術者」のメリット3つ](https://article.yahoo.co.jp/detail/d76b9877ba6933d06779ba8ae158d93c201b8579)  
 
 ## おもしろ
 
