--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -542,12 +542,6 @@ comroomみたいなものか
 
 ---
 
-・IIS(Internet Information Servise)
-Windows標準のWebサーバーサービス
-HTTP/HTTPS,FTP,SMTP,NNTPなどの基本的なプロトコルはサポートしている
-
----
-
 ・ASP.NET(Active Server Page を.Net向けにしたもの)
 Webアプリケーションフレームワークで動的なウェブサイトやWebアプリケーションやXML Webサービスの開発や運用を行う
 
@@ -572,6 +566,24 @@ avalon peninsula canada
 LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件となるか。
 結果、3件になるのは確認したが、不安なのでちゃんと確認する。
 
+
+## 移行
+
+パソコン移行に関してできることといえば、今入っているソフトの中で必要なものをピックアップしたり、データをクラウドに挙げたりして、いつでも移行できる環境を整えておくくらいか。
+
+## 勉強
+
+ネットワーク思った以上に間違える。
+やばいね。
+
+やってて思った。
+家では午後問題をやって、トイレにこもっている時間は午前問題をやる。
+とりあえず一回やる。これは予習扱い。間違えてもいい。
+そして、家でまとめるためにもう一度。
+問題をやったらまとめないといけないという強迫観念にとらわれていた。
+予習しておけば、問題を見たときにパッとわかるでしょ。
+そうしたら解く時間とまとめる時間を分離することができる。
+だるいのは解いたらまとめないといけないという思い込み。
 
 8000
 3M
