元年データベース午後

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -567,36 +567,12 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 結果、3件になるのは確認したが、不安なのでちゃんと確認する。
 
 
+PoE(Power over Ethernet)
+イーサネットのLANケーブルを通じて電力を供給する技術です。屋外に設置されるネットワークカメラや、天井や壁に設置される無線LANアクセスポイントのように、電源コンセントがない又は電源配線が難しい場合に利用されます。利用にはPoEに対応した機器が必要です。
+
+PLC(Power Line Communications)
+電力線を通信回線としても利用する技術です。
+
 ## 移行
 
 パソコン移行に関してできることといえば、今入っているソフトの中で必要なものをピックアップしたり、データをクラウドに挙げたりして、いつでも移行できる環境を整えておくくらいか。
-
-## 勉強
-
-ネットワーク思った以上に間違える。
-やばいね。
-
-やってて思った。
-家では午後問題をやって、トイレにこもっている時間は午前問題をやる。
-とりあえず一回やる。これは予習扱い。間違えてもいい。
-そして、家でまとめるためにもう一度。
-問題をやったらまとめないといけないという強迫観念にとらわれていた。
-予習しておけば、問題を見たときにパッとわかるでしょ。
-そうしたら解く時間とまとめる時間を分離することができる。
-だるいのは解いたらまとめないといけないという思い込み。
-
-8000
-3M
-300 * 10^-9
-900 * 10-3
-0.9s
-0.8s
-
-1.7s
-
-2.5s
-
-0.8s
-8000bit
-
-10000bit / s
