ネットワーク午前完了、データベース午後2問、その他

--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -2,6 +2,61 @@
 
 ---
 
+## データベース 薬剤管理システムの再構築
+
+まぁ、及第点ってところじゃないですかね。  
+わかるところはわかったけどって感じ。  
+
+でも、昔に解いた時はとても難しく感じたので、それから比べたら意味を理解して解けるようになったと思う。  
+最近、デッドロックや移行クエリのおかげもあって、それなりにできるようになってきたように感じる。  
+
+しかし毎回、回答書く必要あるかなぁ？  
+なんか段々面倒臭くなってきた。  
+まとめる事が目的になりつつある。  
+重要なのはそこではないような？  
+
+うん。毎回書くの怠いし、点数見れれば十分だし、後はどう考えてそれを入れたのか書けば十分じゃないか？  
+
+``` txt : 解説 29分 9/11
+## 2
+[1]処方箋 × 処方箋明細
+
+→
+処方箋レコードは削除しないと書いてあったので、ここらへんだと思っていたが、よくよく考えれば、明細側をINSERTしたりDELETEすべきだよな。
+
+→
+医師が、(4)処方箋の登録（発行前）を行うと、処方箋テーブルと処方箋明細テーブルに処方しようとしている薬剤が登録されます。
+その後〔薬剤併用チェック処理〕により、"併用禁忌"または"併用注意"となる組合せが出力され、医師はその情報を参考にして処方する薬剤を見直します。
+見直しでは、処方する薬剤の種類を変えたり、追加したり、取り止めたりといったことが行われ、
+その際に処方箋明細テーブルから登録済の薬剤を削除したり、新たに薬剤を追加したりといった操作を行うことになります。
+
+つまり、(5)薬剤チェックの段階では、処方箋明細テーブルに対してレコードの削除や作成が行われると考えられます。したがって、cには「処方箋明細」が当てはまります。
+なお、削除の結果、処方箋明細が0件になる場合がありますが、その場合でも「処方箋レコードは削除しない」としているので、処方箋テーブルは操作対象外となります。
+
+
+## 4
+k: <= CURRENT_DATE × IS NULL
+表2で思いっきりnullが入るように記述されている。
+これだけでも割とヒントだった。
+で、処方されていないって事ならIS NULLになるわな。
+
+→
+kには上記の3つ目の条件で集計対象を絞るための条件式が入ります。
+表1・2を見ると、薬剤が処方されたときは、処方箋テーブルの"薬剤処方年月日"列をNULLから（非NULLの日付に）更新することがわかります。
+つまり、処方箋テーブルの"薬剤処方年月日"列の値がNULLのレコードは、まだ薬剤が処方されていない状態ということです。
+
+在庫保証の対象となるのは「まだ薬剤が処方されていない」レコードですから、"薬剤処方年月日"列の値がNULLのレコードを選択すれば、該当するレコードを絞り込めます。
+よって、条件式には「薬剤処方年月日 IS NULL」を指定するのが適切です。
+
+
+## コラム
+※WITH句
+副問合せに名前を付け、それを他のSQL文内で使用できるようにするものです。
+「WITH 副問合せ名 AS (クエリ文)：副問合せ名」を記述することにより、ASの直後のクエリ文を何度も記述することなく使い回すことができます。
+```
+
+---
+
 ## 組み込みシステム 家庭用浴室給湯システム
 
 簡単なほうだったが、最初の認識を微妙にミスったので点数が取れなかった。  
