--- a/BasicInformation/午前/1.テクノロジ系/9.データベース.md
+++ b/BasicInformation/午前/1.テクノロジ系/9.データベース.md
@@ -201,17 +201,6 @@ RESTRICTと同じく更新・削除を禁止するが、エラー発せいがタ
 
 参照先データの更新または削除されると、対応する参照元レコードの属性値にデフォルト値を設定する。  
 
-### 検査制約
-
-テーブルに格納されるデータの種類を一定の範囲や種類に限定するための方法です。  
-検査制約を設けるには、CREATE TABLE文でテーブルを作成するときの属性(列)の定義を  
-
-CHECK(属性名 検査式)  
-
-という形式で記述することで、特定の列の値が任意の式を満たすように指定できます。  
-
-設問では"学生番号"列に LIKE 'K%'(Kから始まる任意の文字列)という制約が定義されているので、各SQL文がこれに反する操作を行っていないかを検証します。  
-
 ---
 
 ## トランザクション処理
@@ -520,6 +509,15 @@ B+木は、根および節にはキー値の範囲と下層のブロックへの
 
 ### 検査制約
 
+テーブルに格納されるデータの種類を一定の範囲や種類に限定するための方法です。  
+検査制約を設けるには、CREATE TABLE文でテーブルを作成するときの属性(列)の定義を  
+
+CHECK(属性名 検査式)  
+
+という形式で記述することで、特定の列の値が任意の式を満たすように指定できます。  
+
+設問では"学生番号"列に LIKE 'K%'(Kから始まる任意の文字列)という制約が定義されているので、各SQL文がこれに反する操作を行っていないかを検証します。  
+
 CHECK句を用いて指定します。  
 
 ### キー制約
@@ -539,9 +537,11 @@ PRIMARY KEY句やFOREIGN KEY句を用いて指定します。
 データベースに記録するデータの中には、特定の値の種類しか取らないものや、何らかの規則や基準に従った内容である必要があるものがある。  
 そのような制約条件を各フィールド（カラム）の仕様として組み込み、データが追加・更新・削除される時点でシステム側でチェックする仕組みが整合性制約である。  
 
-### 一意制約
+### 一意制約(UNIQUE制約)
 
 特定の列が一意であることを保証します。  
+
+令和2年秋の午後問題で出てきた。
 
 ### NOT NULL制約
 
