ちょっとしたやつ追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -569,3 +569,8 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 ## 移行
 
 パソコン移行に関してできることといえば、今入っているソフトの中で必要なものをピックアップしたり、データをクラウドに挙げたりして、いつでも移行できる環境を整えておくくらいか。
+
+・scheme
+〔体系的な行動の〕計画、構想
+「枠組み」
+「どんな手段で通信しますよ」を示す情報（スキーム名）のひとつ
