・データベース4問 ・システム開発技術

--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -1,5 +1,34 @@
 # 平成28年秋期
 
+## データベース ネットショップの会員管理
+
+話はわかったけど、勘違いして時間がかかってしまった。  
+完全に間違えたのは1つだけ
+
+``` txt : 30分 9/10
+イ
+{商品番号}
+SUM(t4.商品単価 * t4.個数)
+t2.購入日時
+t2.購入ステータス = '完了'
+ORDER BY t2.会員番号,t2.購入日時
+goukei >= 50000
+SET 会員種別 = '特別会員' → SET t1.会員種別 = '特別会員'
+購入 → 会員
+会員番号、適用日時、会員種別 → 会員番号，会員種別，適用日時
+
+
+追加するエンティティは会員の会員種別の履歴に関するもので、会員の会員番号と会員種別の適用日時により、履歴を一意に特定することになると考えられます。当然1人の会員に対して複数の適用日時が存在することが想定されるので、会員エンティティと追加するエンティティのカーディナリティは1対多になります。したがって、追加するエンティティと関連をもたせる既存のエンティティ名は「会員」となります。
+
+∴会員
+
+追加するエンティティでは会員の会員番号と会員種別の適用日時により、会員種別の履歴を管理することになります。したがって、追加されるエンティティには少なくとも、「会員番号，適用日時，会員種別」の属性が必要です。（関係スキーマ：エンティティ名（属性名1，属性名2，…）を記述するならば、会員種別履歴（会員番号，適用日時，会員種別）のようになります）
+
+∴会員番号，会員種別，適用日時
+```
+
+---
+
 ## 組み込みシステム 腕時計型脈拍計の設計
 
 今までとは打って変わって、1問しか正解しなかった。  
