--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -72,6 +72,40 @@ AESはDESの後継。
 
 ---
 
+## データベース 青果卸売業の取引システム改修
+
+卸売関係の話はよくわからなかったが、キーワードとデータの構造だけに着目すればそれほど難しくはなかったか。  
+しかし、細かい部分で完璧では無かったので、やはりそれなりの難易度だったとは思う。  
+
+``` txt : 23分 8/10
+## 2
+(品目コード)、(産地コード)、パレット数、単価 ×
+→
+(品目コード)，(産地コード)，パレット数，単価，(仕入担当者コード)
+
+→
+〔取引システムの改修〕には「販売担当者が仲卸業者の希望する品目，産地，パレット数，単価，販売予定日を（中略）それが予約情報として取引システムに入力される。（中略）予約情報は品目や産地に応じて各仕入担当者に割り当てられ，その情報も取引システムに入力される。」とあります。よって、予約明細エンティティには品目を示す"品目コード"、産地を示す"産地コード"、"パレット数"、"単価"、そして仕入担当者を示す"仕入担当者コード"を追加する必要があります。このとき、予約明細エンティティの外部キー（追加分）は次のようになります。
+"品目コード"：品目エンティティの主キーを参照
+"産地コード"：産地エンティティの主キーを参照
+"仕入担当者コード"：従業員エンティティの主キー"従業員コード"を参照
+したがって[e]に入る属性は、以下の5つです。
+
+
+
+## 3
+SUM(t2.パレット数 * t2.単価)
+∴f＝SUM(t2.単価 * t1.パレット数)
+
+合計金額なので、数量と単価を掛け合わせるのは当たり前だが、t1側のパレット数を使うのは盲点だった。
+→
+合計返品金額を求める式を考えます。返品金額は「単価×パレット数」で求めることができます。
+返品表（t1）には返品されたパレット数は記録されているものの、単価はないので、販売明細表（t2）のものを使用します。
+そして、集約関数 SUM を用いて返品金額を合計すれば合計返品金額を求めることができます。
+したがって、[f]には「SUM(t2.単価 * t1.パレット数)」が入ります。
+```
+
+---
+
 ## 組み込みシステム ドライブレコーダ
 
 簡単なほうだったが答え方の形式により不正解になったのが3問あった。  
