--- a/AppliedInformation/午後/H29S.md
+++ b/AppliedInformation/午後/H29S.md
@@ -41,9 +41,41 @@ e:インターネット
 ア、ウ
 ```
 
-``` txt : 解説
+---
+
+## データベース 稟議申請システム
+
+「ユーザー」か「ユーザ」か気を付ける事。  
+本文の表現にそぐわない場合、減点される恐れがある。  
+ほぼ満点と見ていいだろう。  
+表現の問題でダメだった。  
+1つ引っかかった部分があるので、そこはしっかり確認しておく。  
+
+``` txt : 29分 9/10
+## 1
+外部キーがあれば1対多と見て問題なさそう。
+
+購買稟議の場合は，申請者の所属部署の部長，購買部の担当者，購買部の部長の順で，承認が必要となる。」とあるので、1つの承認申請に対して複数の承認者がつくことがわかります。したがって、承認申請エンティティと承認者情報エンティティのカーディナリティは1対多であり、
+→
+ここの意味合いも認識と合っている。
+
+
+## 3
+クエリの構築。
+メイン = T1 ADN T1 = T2とすべきか悩んだ。
+メイン = T1 AND メイン = T2とした場合、全ての組み合わせを作るらしい。
+そのイメージは持たなかった。
+
+
+## 4
+これはRNでも同じ現象に遭遇したのですぐにわかった。
+マスターとJOINさせた場合、過去のデータを残すことが出来ない。
+そういうわけで、着眼点はよかったが、単純な「部署名」ではなく、「申請時部署名」としなければならなかった模様。
 ```
 
 ---
 
 ## 組み込みシステム スマートウォッチ
+
+``` txt
+```
