--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -7,6 +7,86 @@
 
 ---
 
+## データベース 入室管理システムの設計
+
+難しかった。  
+この年のデータベースは難しい模様。  
+スレッドもあれている。  
+
+``` txt : 30分 7/9
+## 1
+グラフは答えを覚えていたので正解ではあるが、なぜそうなのか説明出来ないので不正解みたいなものだろう。
+→
+意外と単純なもので、主キーと外部キーを見比べれば一目瞭然だった。
+ユースケースから考えると難しいけど、単純にE-R図上で考えてみれば1対多になる可能性があるかどうかで判断できるから、素直にそれだけでよかった。
+
+
+## 2
+ここは特に何もないかな。
+主キーといわれてこれ以外は考えられないし。
+
+
+## 3
+TRUE,FALSEを返す文はCOUNTだけでよかったか。
+最初はそう書いたのだが、WHEREの意味がよくわからなかったので、CASEまで書いたけどダメだった。
+深読みして失敗したパターンってやつだな。
+
+→
+図2のSQL文では、ROOMスキーマの入室許可表から「社員IDと室IDが指定のものであり、今日が入室許可期間内である」という条件のレコードを抽出します。
+この条件を満たすレコードが存在する（つまり、レコードが1つ以上）ということは本日の入室が許可されていて、条件を満たさない（つまり、レコードがない）ということは本日の入室が許可されていないということです。
+
+aにレコードの個数を数える関数を入れれば、本文で説明されている結果、すなわち前者に1以上を後者に0を返すことができます。したがって、aには「COUNT(*)」が当てはまります。
+→
+AND 入出許可開始 <= :今日 AND 入出許可終了 >= :今日
+時間ではなく、日で考える。
+2日部屋を予約したのなら？終了は今日より後に無くてはならないし、許可は少なくとも今日からでないといけない。
+だからちゃんと有効範囲内に入っている事がわかる。
+ここまで読むことが出来なかった。
+しかも、問題文にはちゃんと「可の場合は1以上」って記述があるので、なおさらCOUNTでよかった。
+
+
+## 4
+GRANT文なんて使ったことはなかったが、ONやTOの前置詞の意味が分かれば、自ずと答えは決まってくる。
+許可する命令をビューに与え、それをユーザーに付けるというイメージかな。
+GRANT 許可する命令 ON 付与するビュー TO 付与するユーザー
+`GRANT <権限> ON <表名> TO <ユーザ名>`  
+
+HRかROOMか。
+ここ毎回ROOMにしようとしてしまうのだけど、何故だろうか。
+→
+〔各社内システムのRDBMSユーザ〕には「社内システムごとにデータベース管理者(以下，DBAという)が存在する。
+DBAは表の所有者であり，他のユーザに対して，自分が所有する表へのアクセス権限を付与することができる。」とあります。
+前述したようにビュー表"入室管理用社員"の属するスキーマは「HR」ですから、アクセス権限の付与は人事システムのDBA用ユーザが実行します。
+表4より、人事システムのDBA用ユーザ名は「HR_DBA」とわかります。
+→
+直前の問題がROOM_APに対して権限を付与しているから、ならROOM_DBAから付与されるのが筋だよなって勘違いしてしまうからだろうか。
+
+
+## 5
+ここは是非とも正解しておきたかった。
+やりたいことはわかったけど、それをクエリに落とし込めなかった感じ。
+間に組織を挟んで考えれば簡単だった。
+
+→
+図5のSQL文によると、ビュー表"入室管理用社員"の各列の対応は次のようになります。
+社員ID：社員表（T1）の社員ID列
+氏名：社員表（T1）の氏名列
+勤務区分：社員表（T1）の勤務区分列
+組織長氏名：社員表（T2）の氏名列
+ある社員の組織長の氏名を得るためには、その社員の「社員ID→所属する組織の組織ID→その組織の組織長の社員ID→組織長の氏名」の順に参照すればよいと考えられます。
+それをSQL文で実現するには、
+
+「社員ID、所属組織ID、氏名、勤務区分をもつ社員表(T1)」と「組織ID、組織長の社員IDをもつ組織表(T3)」を(所属)組織IDで結合する。
+　 →WHERE句に「T1.所属組織ID = T3.組織ID」を記述する。
+
+「組織長の社員IDをもつ組織表(T3)」と「社員ID、氏名をもつ社員表(T2)」を(組織長の)社員IDで結合する。
+　 →WHERE句に「T3.組織長の社員ID = T2.社員ID」を記述する。
+
+といった手続きを行います。
+```
+
+---
+
 ## 組み込みシステム カードを使用した電子扉システムの設計
 
 プリエンプション  
