--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -2,6 +2,52 @@
 
 ---
 
+## データベース 備品購買システムの設計と実装
+
+100点！！  
+ふぅ――――↑↑気持ちいいいw  
+本当にだんだんわかるようになってきた。  
+この調子でやっていきたい。  
+
+``` txt : 30分 11/11
+
+## メモ
+単純に考えれば、返品区分とか持たせればいいと思うけど、どうだろう。
+何か違う気がするな。
+あ、よく見たらレコードって書いてある。
+フィールドだと思ってたけど、レコードならマイナス数量のレコード一択だな。
+
+## 1
+地味にリレーションの問題で苦戦した。
+全部正解したからよかったけど、間違えてもおかしくはなかっただろう。
+
+見積もり依頼と見積もりと発注と検収は全て1対1でつながる。
+発注は同じ商品を複数の会社に依頼してって事もあり得るので1体多だが、検収はそれらすべてを受け取ったことをチェックするので、1回で済ませるだろうという予想は当たった。
+この見積もり、発注、検収業務はやったことがないので、イメージするのに苦労したけど、まぁ、何とかなったか。
+
+
+## 2
+ここも地味にわからなかったが、影響があるテーブルが見積依頼である関係上、見積もり依頼明細しかなかったので、それを書いたら正解だった。
+普通に考えてそれしかない思考はシンプルながら地味に威力を発揮する模様。
+
+
+## 3
+SQLの組み立てに関しては特に問題無かった。
+hの条件だけ意図がわからなくて悩んだ。
+2回も発注番号で絞る意味は内容に思えたが、それしかなかったのでそうしたら正解だった。
+解説でも冗長とあったので、俺の違和感は正しかったわけだ。
+
+
+## 4
+同じ納品番号に対して納入数量がマイナスのレコード 100%
+→
+返品した商品の数量をマイナスの値に設定したレコード
+
+返品した商品の数量はマイナスにするってニュアンスだったらおけか。
+```
+
+---
+
 ## 組み込みシステム 児童の見守り機能付き防犯ブザー
 
 久しぶりに出来なかった。  
