昨日の復習、整理、こまごまとしたもの。

--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -3,28 +3,64 @@
 ## データベース ネットショップの会員管理
 
 話はわかったけど、勘違いして時間がかかってしまった。  
-完全に間違えたのは1つだけ
+完全に間違えたのは1つだけ。  
+もう1つダメ判定くらったけど、書いてる内容は同じなので正解とみなして問題ないだろう。  
+主キーの順に書いてるのだから、むしろこっちが正解だと思うけど。  
+
+あー、後もう一つあったわ。  
+テーブルのエイリアス書き忘れた奴。  
+内容は合ってるけど、気を付けましょうとしか言いようがないね。  
+
+しかし、この年の問題は愚直にデータベースしてた気がする。  
+終始、E-R図とクエリに重点を置いて、業務がどうのこうのって出題は全くなかった。  
+自分が知る限り、この年の問題が一番データベースしてると思う。  
+
+後は、回答をまとめるならこの程度で十分かなって思った。  
+目的は合格する事であって、そのために自分がわかりやすくまとめられれば十分だし、納得できればいいわけで、見やすく整理する必要はないわけで、  
+まとめる事が目的になってはいけないのdあ。  
+解説をそのまま埋め込んでも意味ないし、自分がどう考えたのかを記述しないと意味がない。  
 
 ``` txt : 30分 9/10
 イ
 {商品番号}
+
 SUM(t4.商品単価 * t4.個数)
 t2.購入日時
+
 t2.購入ステータス = '完了'
 ORDER BY t2.会員番号,t2.購入日時
 goukei >= 50000
-SET 会員種別 = '特別会員' → SET t1.会員種別 = '特別会員'
-購入 → 会員
-会員番号、適用日時、会員種別 → 会員番号，会員種別，適用日時
+SET 会員種別 = '特別会員' × SET t1.会員種別 = '特別会員'
+
+購入 × 会員
+会員番号、適用日時、会員種別 × 会員番号，会員種別，適用日時
 
 
-追加するエンティティは会員の会員種別の履歴に関するもので、会員の会員番号と会員種別の適用日時により、履歴を一意に特定することになると考えられます。当然1人の会員に対して複数の適用日時が存在することが想定されるので、会員エンティティと追加するエンティティのカーディナリティは1対多になります。したがって、追加するエンティティと関連をもたせる既存のエンティティ名は「会員」となります。
+## 4
+
+[1]
+追加するエンティティは会員の会員種別の履歴に関するもので、会員の会員番号と会員種別の適用日時により、履歴を一意に特定することになると考えられます。
+当然1人の会員に対して複数の適用日時が存在することが想定されるので、会員エンティティと追加するエンティティのカーディナリティは1対多になります。
+したがって、追加するエンティティと関連をもたせる既存のエンティティ名は「会員」となります。
 
 ∴会員
 
-追加するエンティティでは会員の会員番号と会員種別の適用日時により、会員種別の履歴を管理することになります。したがって、追加されるエンティティには少なくとも、「会員番号，適用日時，会員種別」の属性が必要です。（関係スキーマ：エンティティ名（属性名1，属性名2，…）を記述するならば、会員種別履歴（会員番号，適用日時，会員種別）のようになります）
+→
+関係あるとしたら会員か購入かしかないと思ってはいた。
+会員は問題文に出てるし、わざわざ答えとする必要はないだろうし、一番怪しいとしたら購入しかないよなーって思ってたら会員だったという落ち。  
+深読みとかそういうレベルではない。
+だけど、問題文に明記されていなかったら、「いや・・・これしかないよなぁ？」って間隔でやっちゃってもよかったのかもね。
+
+
+[2]
+追加するエンティティでは会員の会員番号と会員種別の適用日時により、会員種別の履歴を管理することになります。
+したがって、追加されるエンティティには少なくとも、「会員番号，適用日時，会員種別」の属性が必要です。
+（関係スキーマ：エンティティ名（属性名1，属性名2，…）を記述するならば、会員種別履歴（会員番号，適用日時，会員種別）のようになります）
 
 ∴会員番号，会員種別，適用日時
+
+→
+主キーの順に書いてるからむしろ俺のほうが正解だと思うけど？
 ```
 
 ---
