--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -618,3 +618,33 @@ LEFT OUTER JOIN した時、左が1件、右が3件の時、1件となるか3件
 〔体系的な行動の〕計画、構想
 「枠組み」
 「どんな手段で通信しますよ」を示す情報（スキーム名）のひとつ
+
+・found footage  
+ファウンド・フッテージ  
+映画（やテレビ番組）のジャンルの1つで、モキュメンタリーの一種。  
+撮影者が行方不明などになったため、埋もれていた映像という設定のフィクション作品。  
+撮影者と無関係な者の手に渡り、そのまま公開されることになったという設定でもある。  
+
+## Linuxディストリビューション
+
+・Red Hat系
+ ・Fedora
+ ・Red Hat Enterprise Linux
+ ・CentOS
+
+・Debian系
+ ・Ubuntu
+ ・Linux Mint
+ ・Raspbian
+
+・Slackware系
+ ・Slackware
+ ・openSUSE
+
+・独立系
+ ・Arck Linux
+
+## ふるさと納税の申込期限はいつまで？
+
+ふるさと納税で税金の控除を受けるためには、税務上の手続き（控除の申請）が必要で、その対象となる期間は1月1日～12月31日の1年区切りです。  
+したがって、今年1年間に行ったふるさと納税については、すべて翌年に税務上の手続きをすることが必要です。  
